--- a/style.css
+++ b/style.css
@@ -2,15 +2,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
-@font-face {
-    font-family: 'Android';
-    src: url('/fonts/idroid.otf') format('opentype');
-    font-weight: normal;
-}
+@import url('https://fonts.googleapis.com/css2?family=Quantico&display=swap');
+
 
 /* Variaveis em CSS */
 :root {
-    --cor0: #ebe5c5;
+    --cor0: #fdfbe5;
     --cor1: #83e1ad;
     --cor2: #3ddc84;
     --cor3: #2fa866;
@@ -19,7 +16,7 @@
 
     --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
     --fonte-destaque: 'Bebas Neue', cursive;
-    --fonte-android: 'Android', cursive;
+    --fonte-android: 'Quantico', sans-serif;
 
 }
 
@@ -35,8 +32,12 @@ body {
     font-family: var(--fonte-padrao);
 }
 
+a.externo::after {
+    content: '\00A0\1F517';
+}
+
 header {
-    background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
+    background-image: linear-gradient(to bottom, var(--cor3), var(--cor4));
     /*altura header*/
     min-height: 150px;
     text-align: center;
@@ -47,8 +48,9 @@ header > h1 {
     color: white;
     font-family: var(--fonte-destaque);
     font-size: 3em;
+    letter-spacing: 2px;
     margin-bottom: 20px;
-    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.438);
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.439);
 
 }
 
@@ -57,9 +59,10 @@ header > p {
     font-size: 1.2em;
     color: white;
     /*configurações para centralizar o p do header e fazer ele quebrar na responsividade*/
-    max-width: 600px;
+    max-width: 500px;
     padding-right: 10px;
     padding-left: 10px;
+    padding-bottom: 20px;
     margin: auto;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.438);
 }
@@ -71,10 +74,11 @@ nav{
 }
 
 nav > a{
-    color: white;
-    padding: 10px;
+    color: var(--cor1);
+    font-size: 1em;
+    padding: 8px;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: 500;
     border-radius: 5px;
     transition-duration: .3s;
 }
@@ -102,6 +106,7 @@ header > h1{
 
 main h1{ 
     font-family: var(--fonte-android);
+    color: #063d1e;
 
 }
 
@@ -149,6 +154,46 @@ main img.pequeno{
     max-width: 350px;
     display: block;
     margin: auto;
+}
+
+div.video {
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 57%;
+    position: relative;
+}
+
+div.video > iframe {
+    position: absolute;
+    top: 4%;
+    left: 4%;
+    width: 92.5%;
+    height: 93%;
+}
+
+aside {
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px;
+}
+
+aside > h3 {
+    background-color: var(--cor4);
+    color: white;
+    padding: 10px;
+    margin: -10px -10px 0px -10px;
+    border-radius: 10px 10px 0px 0px;
+
+}
+
+aside >ul {
+    list-style-position: inside;
+    list-style-type: '\2714\00A0'; /*adicionando o simbolo de check e 1 00A0 para aumentar o espaçamento entre bullet e text*/
+    columns: 2;
+    padding:25px;
+
+    
 }
 
 footer{
